<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.unam.unica.curso.formulacalendario.ConfirmaDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/text_confirma_datos"
        
        android:textSize="@dimen/letra_verficadatos"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:text="@string/text_nombre"
        android:layout_marginLeft="@dimen/margin_izquierdo_derecho"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:text="@string/text_fecha_nacimiento_datos"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_izquierdo_derecho"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/text_telefono"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_izquierdo_derecho"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:text="@string/text_email"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_izquierdo_derecho"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="255dp"
        android:text="@string/text_descripcion"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_izquierdo_derecho"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:text="@string/text_btn_editar_datos"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
